--- a/foodie-dev-api/src/main/resources/application.yml
+++ b/foodie-dev-api/src/main/resources/application.yml
@@ -1,5 +1,13 @@
+############################################################
+#
+# web访问端口号  约定：8088
+#
+############################################################
 server:
   port: 8088
+  tomcat:
+    uri-encoding: UTF-8
+  max-http-header-size: 80KB
 ############################################################
 #
 # 配置数据源信息
@@ -8,10 +16,10 @@ server:
 spring:
   datasource: # 数据源的相关配置
     type: com.zaxxer.hikari.HikariDataSource # 数据源类型：HikariCP
-    driver-class-name: com.mysql.jdbc.Driver # mysql驱动
-    url: jdbc:mysql://localhost:3306/foodie-shop-dev?useUnicode=true&characterEncoding=UTF-8&autoReconnect
+    driver-class-name: com.mysql.cj.jdbc.Driver # mysql驱动
+    url: jdbc:mysql://localhost:3306/foodie-shop-dev?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=GMT&useSSL=false
     username: root
-    password: wang1234
+    password: root
     hikari:
       connection-timeout: 30000 # 等待连接池分配连接的最大时长（毫秒），超过这个时长还没可用的连接则发生SQ
       minimum-idle: 5 # 最小连接数
@@ -29,3 +37,13 @@ spring:
 mybatis:
   type-aliases-package: com.zxelec.pojo # 所有POJO类所在包路径
   mapper-locations: classpath:mapper/*.xml # mapper映射文件
+############################################################
+#
+# mybatis mapper 配置
+#
+############################################################
+# 通用 Mapper 配置
+mapper:
+  mappers: com.zxelec.my.mapper.MyMapper
+  not-empty: false    # 在进行数据库操作的的时候，判断表达式 username != null, 是否追加 username != ''
+  identity: MYSQL
