--- a/foodie-dev-service/pom.xml
+++ b/foodie-dev-service/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>com.zxelec</groupId>
-            <artifactId>foodie-dev-service</artifactId>
+            <artifactId>foodie-dev-mapper</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
